<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">



    <ImageView
        android:id="@+id/trajectoryImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_description"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.3"
        >

        <!--LATITUDE  layout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/latitudeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:text="@string/latitude_title"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/latitude_filler"
                android:textAlignment="center"
                android:textSize="11sp"/>

        </LinearLayout>

        <!--LONGITUDE layout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >


            <EditText
                android:id="@+id/longitudeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:text="@string/longitude_title"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/longitudeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/latitude_filler"
                android:textAlignment="center"
                android:textSize="11sp"
                />

        </LinearLayout>

        <!--DISTANCE layout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/distanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:ems="10"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:text="@string/distance_title"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/punctualDistanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_filler"
                android:textAlignment="center"
                android:textSize="11sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.02"
        >

        <TextView
            android:id="@+id/numberOfPointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_of_points"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/totalDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_distance"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/distanceFromOriginTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/distance_from_origin"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/directionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="@string/directions"
        android:textAlignment="center"
        />


    <Switch
        android:id="@+id/continuousLocationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:text="Display Location"
        android:textAlignment="center"
        android:textSize="20dp"
        android:paddingHorizontal="50dp"
        android:layout_marginBottom="20dp"/>

    <!--BUTTON Linear Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.02"
        android:paddingHorizontal="20dp"
        >

        <ImageButton
            android:id="@+id/saveDataButton"
            style = "@style/SaveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description"
            />

        <ImageButton
            android:id="@+id/restartButton"
            style = "@style/RestartButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description"/>

        <ImageButton
            android:id="@+id/goToVisualizerButton"
            style = "@style/VisualizerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description"/>


    </LinearLayout>

</LinearLayout>


