<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">


    <ImageView
        android:id="@+id/trajectoryVisualizerImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_description"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.01"
        >

        <CheckBox
            android:id="@+id/selectAllCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/select_all"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:textSize="20sp"
            android:text="@string/trajectory_file"
            android:textStyle="bold"
            android:padding="20dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/noFileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:textSize="18sp"
        android:text="@string/no_trajectory_file_saved"
        android:textStyle="italic"
        android:padding="20dp"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trajectoryFilesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scrollbars="vertical"
        android:layout_weight="0.01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        >

        <ImageButton
            android:id="@+id/backToTrackerButton"
            style = "@style/BackToTrackerButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description" />

        <ImageButton
            android:id="@+id/deleteButton"
            style = "@style/DeleteButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description"/>


        <ImageButton
            android:id="@+id/displayButton"
            style="@style/DisplayButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/no_description"/>

    </LinearLayout>

</LinearLayout>